update navbar and logout

--- a/src/app/components/Register/success-register/success-register.component.html
+++ b/src/app/components/Register/success-register/success-register.component.html
@@ -1,14 +1,17 @@
-<div class="card m-auto" style="width: 38rem;">
-    <div class="card-header bg-primary">
-        Xác nhận tài khoản
-    </div>
-    <div class="card-body">
+<div class="mt-5 mb-2">
+    <div class="card m-auto" style="width: 38rem;">
+        <div class="card-header bg-primary">
+            Xác nhận tài khoản
+        </div>
+        <div class="card-body">
 
-        <p class="card-text">Cảm ơn anh chị đã sử dụng dịch vụ bất động sản của bds.com</p>
-        <p class="card-text">Anh/Chị vui lòng kiểm tra email để xác nhận tài khoản</p>
-        <p class="card-text">Chân thành cảm ơn !</p>
-    </div>
-    <div class="">
-        <button type="button" [routerLink]="['/login']" routerLinkActive="router-link-active"  class="btn btn-warning float-right m-4">Quay Lại Đăng nhập</button>
+            <p class="card-text">Cảm ơn anh chị đã sử dụng dịch vụ bất động sản của bds.com</p>
+            <p class="card-text">Anh/Chị vui lòng kiểm tra email để xác nhận tài khoản</p>
+            <p class="card-text">Chân thành cảm ơn !</p>
+        </div>
+        <div class="">
+            <button type="button" [routerLink]="['/login']" routerLinkActive="router-link-active"
+                class="btn btn-warning float-right m-4">Quay Lại Đăng nhập</button>
+        </div>
     </div>
 </div>
