--- a/src/app/components/user/user-profile/user-profile.component.html
+++ b/src/app/components/user/user-profile/user-profile.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-5">
     <!-- Start Card Thông tin Cá Nhân -->
     <div class="row">
         <div class="col-12">
