--- a/src/app/components/edit-users/edit-users.component.html
+++ b/src/app/components/edit-users/edit-users.component.html
@@ -55,26 +55,30 @@
                             </div>
                             <div class="card bg-light col-md-7 " >
                                 <div class="card-body m-0">
-                                        <form>
+                                        <form #employeeForm="ngForm">
+
                                                 <div class="form-group row">
-                                                  <label for="staticEmail" class="col-sm-3 col-form-label">Email</label>
+                                                  <label for="staticEmail" class="col-sm-3 col-form-label">Họ Tên</label>
                                                   <div class="col-sm-9">
-                                                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                                                        <input type="email" class="form-control" 
+                                                        name="fullName"  [(ngModel)]="fullNameNew" value="{{editusers.fullName}}">
                                                   </div>
                                                 </div>
                                                 <div class="form-group row">
-                                                  <label for="inputPassword" class="col-sm-3 col-form-label">Password</label>
+                                                  <label for="inputPassword" class="col-sm-3 col-form-label">Địa Chỉ</label>
                                                   <div class="col-sm-9">
-                                                    <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                                                    <input type="text" class="form-control"  
+                                                    name="address"  [(ngModel)]="addressNew" value="{{editusers.address}}">
                                                   </div>
                                                 </div>
                                                 <div class="form-group row">
                                                         <label for="inputPassword" class="col-sm-3 col-form-label">Số Điện Thoại</label>
                                                         <div class="col-sm-9">
-                                                          <input type="password" class="form-control" id="inputPassword" placeholder="Số Điện thoại">
+                                                          <input type="text" class="form-control" 
+                                                          name="phoneNumber"  [(ngModel)]="phoneNumberNew" value="{{editusers.phoneNumber}}">
                                                         </div>
                                                 </div>
-                                                  <button class="btn btn-primary" style="float: right;">Lưu Lại</button>
+                                                  <button class="btn btn-primary" style="float: right;"(click)="save();">Lưu Lại</button>
                                         
                                               </form>    
                                       
@@ -151,3 +155,4 @@
     </div>
 </div>
 <!-- ****************** End Footer *********************** -->
+
