--- a/src/app/components/post/post-success/post-success.component.html
+++ b/src/app/components/post/post-success/post-success.component.html
@@ -1,4 +1,4 @@
-<div class="card m-auto" style="width: 38rem;">
+<div class="card" style="width: 38rem;">
     <div class="card-header bg-primary">
         Thông báo
     </div>
