--- a/src/app/components/admin/admin-home/admin-home.component.html
+++ b/src/app/components/admin/admin-home/admin-home.component.html
@@ -1,4 +1,4 @@
-<div class="container border border-bottom-0" style="height: 100vh;">
+<div class="container border border-bottom-0" style="height: 100vh">
     <div class="row border" style="height: 7%; background-color: rgb(226, 226, 226);">
         <div class="col-2 h-100 d-flex flex-column align-items-center justify-content-center">
             <img style="height: 60%;" src="/assets/img/logoCodeGymAdmin.png" alt="">
@@ -18,21 +18,26 @@
                     <i class="fas fa-users-cog text-dark mr-2" style="width: 20px;"></i>
                     <span class="text-dark">Thành viên</span>
                 </button>
-                <button type="button" class="btn btn-outline-light d-flex align-items-center justify-content-start" data-toggle="collapse" data-target="#demo">
+                <button type="button" class="btn btn-outline-light d-flex align-items-center justify-content-start"
+                    data-toggle="collapse" data-target="#demo">
 
                     <i class="fas fa-address-card text-dark mr-2" style="width: 20px;"></i>
                     <span class="text-dark">Bài Đăng</span>
                     <i class="fas fa-chevron-left text-dark pl-2 ml-5" style="font-size: 13px;"></i>
                 </button>
                 <div id="demo" class="collapse w-100">
-                   <button type="button" class="w-100 btn btn-outline-light d-flex align-items-center justify-content-start" [routerLink]="['/admin/post-pending-approval']" routerLinkActive="router-link-active" >
-                    <i class="text-dark mr-2" style="width: 20px;"></i>
-                    <span class="text-dark">Chờ Phê duyệt</span>
-                </button>
-                <button type="button" class="w-100 btn btn-outline-light d-flex align-items-center justify-content-start" [routerLink]="['/admin/post-approved']" routerLinkActive="router-link-active" >
-                    <i class="text-dark mr-2" style="width: 20px;"></i>
-                    <span class="text-dark">Đã Phê duyệt</span>
-                </button>
+                    <button type="button"
+                        class="w-100 btn btn-outline-light d-flex align-items-center justify-content-start"
+                        [routerLink]="['/admin/post-pending-approval']" routerLinkActive="router-link-active">
+                        <i class="text-dark mr-2" style="width: 20px;"></i>
+                        <span class="text-dark">Chờ Phê duyệt</span>
+                    </button>
+                    <button type="button"
+                        class="w-100 btn btn-outline-light d-flex align-items-center justify-content-start"
+                        [routerLink]="['/admin/post-approved']" routerLinkActive="router-link-active">
+                        <i class="text-dark mr-2" style="width: 20px;"></i>
+                        <span class="text-dark">Đã Phê duyệt</span>
+                    </button>
                 </div>
                 <button type="button" class="btn btn-outline-light d-flex align-items-center justify-content-start">
                     <i class="far fa-question-circle text-dark mr-2" style="width: 20px;"></i>
@@ -51,7 +56,6 @@
                     <i class="fas fa-anchor text-dark mr-2" style="width: 20px;"></i>
                     <span class="text-dark">Cấp quyền</span>
                 </button>
-
             </div>
         </div>
         <div class="col-10">
