--- a/src/app/components/change-password/change-password.component.html
+++ b/src/app/components/change-password/change-password.component.html
@@ -40,36 +40,36 @@
     <div class="row mb-3">
         <div class="col">
             <h2>Đổi Mật Khẩu</h2>
-            <div class="card mb-3" style="max-width: 1200px;">
+            <div class="card mb-3" style="max-width: 1000px;">
                  <div class="row no-gutters">
-                            <div class="col-md-4 ">
+                            <div class="col-md-5 ">
                                     <div class="card text-center">
                                             <div class="card-body">
                                                     <img src="https://image.shutterstock.com/image-vector/close-lock-flat-icon-silhouette-260nw-422429257.jpg" 
-                                                    class="img-circle" alt="Hot girl" style="height: 200px;width: 80%;" >
+                                                    class="img-circle" alt="Hot girl" style="height: 250px;width: 80%;" >
                                                     
                                             </div>
                                             
                                     </div>
                                     
                             </div>
-                            <div class="card bg-light col-md-8 " >
+                            <div class="card bg-light col-md-7 " >
                                 <div class="card-body m-0">
                                         <form>
                                                 <div class="form-group row">
-                                                  <label for="staticEmail" class="col-sm-3 col-form-label">Mật Khẩu Cũ</label>
+                                                  <label for="staticEmail" class="col-sm-3 col-form-label">Mật Khẩu Cũ<a class="text-danger">(*)</a></label>
                                                   <div class="col-sm-9">
-                                                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Mật Khẩu Cũ">
+                                                        <input type="password" class="form-control" id="exampleFormControlInput1" placeholder="Mật Khẩu Cũ">
                                                   </div>
                                                 </div>
                                                 <div class="form-group row">
-                                                  <label for="inputPassword" class="col-sm-3 col-form-label">Mật Khẩu Mới</label>
+                                                  <label for="inputPassword" class="col-sm-3 col-form-label">Mật Khẩu Mới<a class="text-danger">(*)</a></label>
                                                   <div class="col-sm-9">
                                                     <input type="password" class="form-control" id="inputPassword" placeholder="Mât Khẩu Mới">
                                                   </div>
                                                 </div>
                                                 <div class="form-group row">
-                                                        <label for="inputPassword" class="col-sm-3 col-form-label">Nhập Lại Mật Khẩu</label>
+                                                        <label for="inputPassword" class="col-sm-3 col-form-label">Nhập Lại Mật Khẩu<a class="text-danger">(*)</a></label>
                                                         <div class="col-sm-9">
                                                           <input type="password" class="form-control" id="inputPassword" placeholder="nhập lai mật khẩu">
                                                         </div>
