--- a/src/app/components/login-admin/login-admin.component.html
+++ b/src/app/components/login-admin/login-admin.component.html
@@ -18,7 +18,7 @@
                                     formControlName="password" placeholder="password">
                                   </div>
                                 </div>
-                               
+                                <p class="container text-center" style="color: red;">{{dataLogin}}</p>
                                   <button class="btn btn-primary "  style="margin-left: 20%;width: 50%;" type="submit">Đăng Nhập</button>
                                
                          </form>    
