--- a/src/app/components/admin/admin-post-list/post-approved/post-approved.component.html
+++ b/src/app/components/admin/admin-post-list/post-approved/post-approved.component.html
@@ -7,10 +7,12 @@
     <div class="row d-flex justify-content-between align-items-center my-2">
         <h6>Tổng cộng: 1 bài đăng</h6>
 
-        <div class="d-flex">
-            <input type="text" class="form-control form-control-sm mr-3" style="width: 200px;">
+        <form action="" (ngSubmit)="onClickSearch()" [formGroup]="formSearch">
+                <div class="d-flex" >
+            <input type="text" class="form-control form-control-sm mr-3" style="width: 200px;" formControlName="title">
             <button class="btn btn-sm btn-success">Tìm kiếm</button>
         </div>
+        </form>
     </div>
 
     <div class="row">
@@ -26,7 +28,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let postAppred of postAppreds | paginate: { itemsPerPage: 5, currentPage: p }">
+                <tr *ngFor="let postAppred of postAppreds ">
                 <!-- <tr> -->
                     <td>{{postAppred.title}}</td>
                     <td>{{postAppred.post_of_types.postOfTypeName}}</td>
@@ -40,7 +42,7 @@
             </tbody>
         </table>
         <div class="mt-4">
-            <pagination-controls (pageChange)="p = $event"></pagination-controls>
+            <!-- <pagination-controls (pageChange)="p = $event"></pagination-controls> -->
         </div>
     </div>
 </div>
