--- a/src/app/components/post/post-add/post-add.component.html
+++ b/src/app/components/post/post-add/post-add.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid d-flex justify-content-center" style="background-color:#f4f4f4;">
+<div class="container-fluid d-flex justify-content-center" style="background-color:#f7f7f7;">
     <div class="container mt-5 mb-2">
 
         <h2>Đăng tin</h2>
@@ -47,7 +47,7 @@
             <hr>
             <div class="container">
                 <div class="row">
-                    <div class="col">
+                    <div class="col bg-white">
                         <div class="card border-0 col-10 float-right">
                             <div class="card-body">
                                 <form [formGroup]="formPosts" (ngSubmit)="onClickAdd()">
