--- a/src/app/components/admin/admin-user-list/admin-user-list.component.html
+++ b/src/app/components/admin/admin-user-list/admin-user-list.component.html
@@ -9,14 +9,22 @@
             viên</h6>
 
         <div class="d-flex">
-            <input type="text" class="form-control form-control-sm mr-3" style="width: 200px;"
-                [(ngModel)]="keyWordForFindUser">
+            <input type="text" class="form-control form-control-sm mr-3" style="width: 300px;"
+                [(ngModel)]="keyWordForFindUser" placeholder="Nhập tên hoặc email">
             <button class="btn btn-sm btn-success" (click)="findUser()">Tìm kiếm</button>
         </div>
     </div>
 
-    <div class="row">
+    <div *ngIf="resultFindUser===null" class="row">
         <h4>Danh sách các thành viên</h4>
+    </div>
+
+    <div *ngIf="resultFindUser!=null" class="row d-flex align-items-center">
+        <button class="btn btn-sm btn-warning my-2 mr-3" (click)="backToListUser()">Trang List</button>
+        <h4 class="py-0 my-0">Kết quả tìm kiếm: </h4>
+    </div>
+
+    <div class=" row">
         <table class="table table-striped table-sm mt-3">
             <thead>
                 <tr>
@@ -52,13 +60,15 @@
         </ul>
     </div>
 
-    <div *ngIf="resultFindUser != null" class="row d-flex justify-content-start mt-3">
+    <div *ngIf="resultFindUser != null" class="row d-flex justify-content-end mt-3">
         <ul class="pagination">
-            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            <li (click)=goToPreviousPageOfResultFind() class="page-item"><a class="page-link">Previous</a></li>
+            <ng-container *ngFor="let paginate of paginationArraysOfResultFind">
+                <li (click)="goToPageOfNumberOfResultFind(paginate)" class="page-item"><a
+                        [ngStyle]="paginate===selectedPageOfResultFind? backgroundColorOfSelectedPage : backgroundColorOfNotSelectedPage"
+                        class="page-link">{{paginate}}</a></li>
+            </ng-container>
+            <li (click)="goToNextPageOfResultFind()" class="page-item"><a class="page-link">Next</a></li>
         </ul>
     </div>
 </div>
