--- a/src/app/components/change-password/change-password.component.html
+++ b/src/app/components/change-password/change-password.component.html
@@ -57,24 +57,30 @@
                                 <div class="card-body m-0">
                                         <form>
                                                 <div class="form-group row">
-                                                  <label for="staticEmail" class="col-sm-3 col-form-label">Mật Khẩu Cũ<a class="text-danger">(*)</a></label>
-                                                  <div class="col-sm-9">
-                                                        <input type="password" class="form-control" id="exampleFormControlInput1" placeholder="Mật Khẩu Cũ">
+                                                  <label for="staticEmail" class="col-sm-4 col-form-label">Mật Khẩu Cũ<a class="text-danger">(*)</a></label>
+                                                  <div class="col-sm-8">
+                                                        <input type="password" class="form-control" id="current_password" placeholder="Mật Khẩu Cũ"
+                                                        name="current_password" [(ngModel)]="changepassword.current_password">
+                                                        <p *ngIf="errors?.current_password" style="color: red;">{{errors.current_password}}</p>
                                                   </div>
                                                 </div>
                                                 <div class="form-group row">
-                                                  <label for="inputPassword" class="col-sm-3 col-form-label">Mật Khẩu Mới<a class="text-danger">(*)</a></label>
-                                                  <div class="col-sm-9">
-                                                    <input type="password" class="form-control" id="inputPassword" placeholder="Mât Khẩu Mới">
+                                                  <label for="inputPassword" class="col-sm-4 col-form-label">Mật Khẩu Mới<a class="text-danger">(*)</a></label>
+                                                  <div class="col-sm-8">
+                                                    <input type="password" class="form-control" id="passwordnew" placeholder="Mât Khẩu Mới"
+                                                    name="passwordnew" [(ngModel)]="changepassword.passwordnew">
+                                                    <p *ngIf="errors?.passwordnew" style="color: red;">{{errors.passwordnew}}</p>
                                                   </div>
                                                 </div>
                                                 <div class="form-group row">
-                                                        <label for="inputPassword" class="col-sm-3 col-form-label">Nhập Lại Mật Khẩu<a class="text-danger">(*)</a></label>
-                                                        <div class="col-sm-9">
-                                                          <input type="password" class="form-control" id="inputPassword" placeholder="nhập lai mật khẩu">
+                                                        <label for="inputPassword" class="col-sm-4 col-form-label">Nhập Lại Mật Khẩu<a class="text-danger">(*)</a></label>
+                                                        <div class="col-sm-8">
+                                                          <input type="password" class="form-control" id="password_confirmation" placeholder="nhập lai mật khẩu"
+                                                          name="password_confirmation" [(ngModel)]="changepassword.password_confirmation">
+                                                          <p *ngIf="errors?.password_confirmation" style="color: red;">{{errors.password_confirmation}}</p>
                                                         </div>
                                                 </div>
-                                                  <button class="btn btn-primary" style="float: right;">Lưu thay đổi</button>
+                                                  <button class="btn btn-primary" style="float: right;"(click)="save();">Lưu thay đổi</button>
                                         
                                               </form>    
                                       
