--- a/src/app/components/admin/admin-post-list/post-approved/post-approved.component.html
+++ b/src/app/components/admin/admin-post-list/post-approved/post-approved.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="row d-flex justify-content-between align-items-center my-2">
-        <h6>Tổng cộng: 1 bài đăng</h6>
+        <h6>Tổng cộng: {{resultPost}} bài đăng</h6>
 
         <form action="" (ngSubmit)="onClickSearch()" [formGroup]="formSearch">
             <div class="d-flex">
