--- a/src/app/components/post/post-list/post-list.component.html
+++ b/src/app/components/post/post-list/post-list.component.html
@@ -1,9 +1,9 @@
 <!-- *********** Start Menu Bar ************ -->
-<div class="container-fluid bg-warning d-flex justify-content-center" style="position: fixed; top: 0px;z-index: 200;">
+<!-- <div class="container-fluid bg-warning d-flex justify-content-center" style="position: fixed; top: 0px;z-index: 200;">
     <div class="row px-3" style="height:45px;width: 1000px; max-width: 1000px;">
         <div class="col-3 d-flex align-items-center">
-            <!-- <img (click)=backToListPost() src="https://static.chotot.com/storage/marketplace/nha_white_logo.png"
-                style="height: 30px;"> -->
+            <img (click)=backToListPost() src="https://static.chotot.com/storage/marketplace/nha_white_logo.png"
+                style="height: 30px;">
             <img class="" (click)=backToListPost() src="/assets/img/logoCodegym.png" style="height: 40px;">
         </div>
         <div class="col-9 d-flex justify-content-end">
@@ -34,7 +34,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!-- *********** End Menu Bar ************ -->
 
 
