--- a/src/app/components/post/post-list/post-list.component.html
+++ b/src/app/components/post/post-list/post-list.component.html
@@ -27,8 +27,7 @@
                     Thêm</span>
             </div>
             <div class="h-100 d-flex align-items-center">
-                <button [routerLink]="['/post/add']" routerLinkActive="router-link-active"
-                    class="btn btn-sm font-weight-bold" style="background-color: #fc9807;"><span
+                <button [routerLink]="['/post/add']" routerLinkActive="router-link-active" class="btn btn-sm font-weight-bold" style="background-color: #fc9807;"><span
                         style="color: white; font-size: 12px;">ĐĂNG
                         TIN</span></button>
             </div>
@@ -53,8 +52,7 @@
                 <form [formGroup]="formSearchPostBasic" (ngSubmit)="onClickSearchBasic()">
                     <div class="d-flex justify-content-between">
                         <div style="width: 40%;">
-                            <input type="text" placeholder="Nhập Tiêu đề hoặc nội dung cần tìm kiếm"
-                                class="form-control" formControlName="wordSearch">
+                            <input type="text" placeholder="Nhập Tiêu đề hoặc nội dung cần tìm kiếm" class="form-control" formControlName="wordSearch">
                         </div>
                         <div style="width: 28%;">
                             <select class="form-control" formControlName="region">
@@ -81,9 +79,7 @@
                             <option value="">Diện tích tổng</option>
                         </select>
                         <!-- *********** Bắt Đầu Tìm Kiếm Nâng Cao ********* -->
-                        <button (click)=" openDialog()"
-                            class="btn btn-outline-secondary btn-sm d-flex justify-content-around"
-                            style="width: 20%;"><span class="text-dark" style="font-size: 15px;">Lọc
+                        <button (click)=" openDialog()" class="btn btn-outline-secondary btn-sm d-flex justify-content-around" style="width: 20%;"><span class="text-dark" style="font-size: 15px;">Lọc
                                 nâng cao</span><i class="fas fa-filter mt-1" style="font-size: 20px;"></i></button>
                         <!-- ********** Kết Thúc Tìm Kiếm Nâng Cao ********** -->
 
@@ -143,12 +139,10 @@
                 </div>
 
 
-                <div *ngFor="let post of posts | paginate: { itemsPerPage: 5, currentPage: p }" class="card mb-2"
-                    style="width: 100%">
+                <div *ngFor="let post of posts | paginate: { itemsPerPage: 5, currentPage: p }" class="card mb-2" style="width: 100%">
                     <div class="row no-gutters">
                         <div class="col-md-4">
-                            <img src="assets/imageFolderOfProject/{{post.imageFolderName}}/image1.png" class="card-img"
-                                alt="..." height="130px" routerLink="/detailpost/{{post.id}}">
+                            <img src="assets/imageFolderOfProject/{{post.imageFolderName}}/image1.png" class="card-img" alt="..." height="130px" routerLink="/detailpost/{{post.id}}">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body h-100 d-flex flex-column justify-content-between py-2">
@@ -302,8 +296,7 @@
 
     <div class="row mx-auto mt-4 text-center d-flex justify-content-center" style="width: 1000px; max-width: 1000px;">
         <p class="text-center" style="font-size: 13px;">
-            Công ty Đào tạo lập trình CodeGym - Địa chỉ: Tầng 10 ,Số 295 Nguyễn Tất Thành , Phường Thanh Bình, Đà Nẵng,
-            550000. <br>
+            Công ty Đào tạo lập trình CodeGym - Địa chỉ: Tầng 10 ,Số 295 Nguyễn Tất Thành , Phường Thanh Bình, Đà Nẵng, 550000. <br>
             <span>Giấy chứng nhận đăng ký doanh nghiệp số 0312120782 do Sở Kế Hoạch và Đầu Tư TP Đà Nẵng cấp ngày
                 11/01/2013</span>
             <br>
